# cpp_cmake_project

./: .gitlab-ci.yml  CMakeLists.txt  CPM.cmake  Makefile  README.md  gcovr.cfg
.github/workflows/: ci.yml
docs/: building.md  dependencies.md  docker.md
my_exe/: CMakeLists.txt
my_exe/test/: CMakeLists.txt
my_header_lib/: CMakeLists.txt
my_header_lib/test/: CMakeLists.txt
my_header_lib/test/constexpr/: CMakeLists.txt
my_lib/: CMakeLists.txt
my_lib/test/: CMakeLists.txt
my_lib/test/constexpr/: CMakeLists.txt
